<resources>
    <string name="app_name">Diagnostic App</string>
    <string name="go_to_hx_marketplace">Go to HX Marketplace</string>
    <string name="imei_number">IMEI Number:</string>
    <string name="start_testing_the_device">Start Testing the device</string>
    <string name="exitapp">ExitApp</string>
    <string name="ops_we_need_all_the_permissions_to_diagnosis_the_device">Ops! We need all the permissions to diagnosis the device.</string>
    <string name="okay">Okay</string>
    <string name="exit_app">Exit App</string>
    <string name="speaker_test_message">Please enter the number you hear from the speaker.</string>
    <string name="speaker_hint">Enter the Number here.</string>
    <string name="replay_audio">Replay Audio</string>
    <string name="volume_down_msg">Please press the Volume down Button</string>
    <string name="volume_up_test">Please press the Volume Up Button</string>
    <string name="proximity_msg">You are covering the Proximity Sensor.</string>
    <string name="proximity_neg_msg">Please move your hand over the Proximity.</string>
    <string name="back_button_msg">Please press the back Button.</string>
    <string name="microphone_msg">Tap the Button and please say the number in words.</string>
    <string name="screen_brightness_msg">Screen Brightness</string>
    <string name="home_button_test_msg">Please press the home button and then restore the app using menu button.</string>
    <string name="vibrate_msg">Please hold the device on your hand and then press the button to vibrate.</string>
    <string name="vibrate_button">Vibrate</string>
    <string name="vibration_hint">Enter the number of vibrations felt:</string>
    <string name="submit">Submit</string>
    <string name="passed">Passed</string>
    <string name="charger_msg">Please connect the charger to the phone and then press the button to test.</string>
    <string name="check_charger">Check the Charger</string>
    <string name="power_button_msg">Long Press the Power Button and then press the back button.</string>
    <string name="headphone_button">Please insert the head phone and press the button to check</string>
    <string name="headphone_check">Check</string>
    <string name="blank_text">Nothing to display</string>
    <string name="sad_msg">Heavy dents and scratches</string>
    <string name="okay_msg">Light Dents and scratches.</string>
    <string name="happy_msg">No Major Scratched or dents.</string>
    <string name="price_msg">Price:</string>
    <string name="finger_print_msg">Please press your Finger on the finger print sensor</string>
    <string name="failed">Failed</string>
    <string name="allow_system_settings">Please allow to modify system settings.</string>
    <string name="loading_message">Please wait while we are loading.</string>
    <string name="ram_usage">Ram Usage</string>
    <string name="pin_msg">Enter the Pin to start Diagnostics</string>
    <string name="enter_pin_here">Enter Pin here</string>
    <string name="login">Login</string>
</resources>
