<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    tools:context="com.hyperxchange.pronoymukherjee.hyperxchangediagnosticnew.Activities.PinCheckActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/appCompatImageView6"
        android:layout_width="110dp"
        android:layout_height="79dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appCompatTextView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/pin_msg"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView6" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/pinEnter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:hint="@string/enter_pin_here"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView7" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submitPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/login"
        android:background="@drawable/rectangle_rounded_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinEnter"
        app:layout_constraintVertical_bias="0.136" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/exitAppPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_rounded_shape"
        android:text="@string/exit_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submitPin"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinEnter"
        app:layout_constraintVertical_bias="0.09" />
</android.support.constraint.ConstraintLayout>


